# forceDirectedLogseq

./: .gitignore  README.md
ImmersiveLogSeq/: .envTemplate  README.md
ImmersiveLogSeq/client/: package.json
ImmersiveLogSeq/client/public/: index.html
ImmersiveLogSeq/client/src/: index.js
ImmersiveLogSeq/server/: Cargo.toml  Dockerfile  start_docker.sh
ImmersiveLogSeq/server/src/: main.rs
